fix for cause title being too low

--- a/app/assets/stylesheets/unite/components/header/header.css.scss
+++ b/app/assets/stylesheets/unite/components/header/header.css.scss
@@ -244,7 +244,12 @@
     margin-bottom: 20px;
 }
 
+#cause-head{
+  padding-top: 40px;
+}
+
 .cause-header {
+    
     background-size: cover;
     min-height: 130px;
     position: relative;
